--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,90 @@
+volumes:
+  ny_taxi_postgres_data:
+  kestra_postgres_data:
+  kestra_data:
+  pgadmin_data:
+
 services:
+  #  MODULE 1 DATABASE (Taxi Data)
   pgdatabase:
     image: postgres:17
     environment:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
       - POSTGRES_DB=ny_taxi
-    volumes:
-      - "./ny_taxi_postgres_data:/var/lib/postgresql/data"
     ports:
       - "5432:5432"
+    volumes:
+      - "./ny_taxi_postgres_data:/var/lib/postgresql/data"
+    depends_on:
+      kestra:
+        condition: service_started
 
   pgadmin:
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
-    volumes:
-      - "pgadmin_data:/var/lib/pgadmin"
     ports:
       - "8085:80"
+    volumes:
+      - "pgadmin_data:/var/lib/pgadmin"
+    depends_on:
+      pgdatabase:
+        condition: service_started
 
-volumes:
-  pgadmin_data:
+  # KESTRA'S INTERNAL DATABASE
+  kestra_postgres:
+    image: postgres:17
+    volumes:
+      - kestra_postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: kestra
+      POSTGRES_USER: kestra
+      POSTGRES_PASSWORD: k3str4
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+
+  # THE KESTRA ORCHESTRATOR
+  kestra:
+    image: kestra/kestra:v1.1
+    pull_policy: if_not_present
+    user: "root"
+    command: server standalone
+    volumes:
+      - kestra_data:/app/storage
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /tmp/kestra-wd:/tmp/kestra-wd
+    environment:
+      KESTRA_CONFIGURATION: |
+        datasources:
+          postgres:
+            url: jdbc:postgresql://kestra_postgres:5432/kestra
+            driverClassName: org.postgresql.Driver
+            username: kestra
+            password: k3str4
+        kestra:
+          server:
+            basicAuth:
+              username: "admin@kestra.io"
+              password: Admin1234!
+          repository:
+            type: postgres
+          storage:
+            type: local
+            local:
+              basePath: "/app/storage"
+          queue:
+            type: postgres
+          tasks:
+            tmpDir:
+              path: /tmp/kestra-wd/tmp
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    depends_on:
+      kestra_postgres:
+        condition: service_healthy
