--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ data.parquet
 output.parquet
 data.csv
 creds.json
+yellow_tripdata_2024-01.parquet
+yellow_tripdata_2024-02.parquet
+yellow_tripdata_2024-03.parquet
+yellow_tripdata_2024-04.parquet
+yellow_tripdata_2024-05.parquet
+yellow_tripdata_2024-06.parquet
