--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.3.1",
+    "google-cloud-storage>=3.9.0",
     "pandas>=3.0.0",
     "psycopg2-binary>=2.9.11",
     "pyarrow>=23.0.0",
